@@ -1,3 +1,8 @@
+2004-06-26  Jan Nieuwenhuizen  <janneke@gnu.org>
+
+	* gnome/gw/wnck-spec.scm (<wnck-wrapset>): Add #:dependencies.
+	(initialize): Remove depends-on!
+
 2004-06-13  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* gnome/gw/Makefile.am: Update.
